--- a/desarrolloweb.html
+++ b/desarrolloweb.html
@@ -29,6 +29,12 @@
                     Desarrollo web significa construir y mantener sitios web; es el trabajo que tiene lugar en un
                     segundo plano y que permite que una web tenga una apariencia impecable, un funcionamiento rápido y
                     un buen desempeño para permitir la mejor experiencia de usuario.</p>
+                    <p>
+                        Mi primer trabajo consistió en la creación de mi porfolio, asi comienza mi camino como desarrollador Web.
+                    </p>
+                    <p>
+                        Las iamgenes que muestro son guias sobre que podemos lograr trabajando juntos, combinando tu necesidad y mis conocimientos...
+                    </p>
             </div>
         </div>
         <div class="row carousel_dw">
