--- a/formulario.html
+++ b/formulario.html
@@ -10,7 +10,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Contacto</title>
 </head>
-<body>
+<body class="fondo4">
     <div class="d-grid gap-3 d-md-flex justify-content-md-start">
         <a href="/index1.html"><button class="btn btn-success me-md-2" type="button">HOME</button></a>
       </div>
