--- a/six_sigma.html
+++ b/six_sigma.html
@@ -10,14 +10,14 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Six Sigma</title>
 </head>
-<body class="fondo1">
+<body class="fondo2">
     <div class="col-md-6">
         <a href="/index1.html"><button class="btn btn-warning me-md-1" type="button">HOME</button></a>
     </div>
     <div class="container-fluid">
        <div class="row">
             <div class="title-link col-md-12 offset-md-4">
-                <a href="/sixsigma.html" class="body__link">Que es SixSigma</a>
+                <a href="/sixsigma.html" class="body__link">Que es SixSigma...?</a>
             </div>
         </div>
         <div class="row">
