--- a/sixsigma.html
+++ b/sixsigma.html
@@ -13,13 +13,17 @@
 <body class="fondo2">
     <div class="button"><button class="btn btn-warning me-md-1"><a href="/six_sigma.html">SIX SIGMA</a></button></div>
     <div class="container-sixsigma">
-        <div class="parrafos">Seis sigma (6 σ) o Six Sigma, más conocida por su denominación en inglés, es una estrategia de mejora de
+        <div class="parrafos">
+            <p>Sigma (6 σ) o Six Sigma, más conocida por su denominación en inglés, es una estrategia de mejora de
             procesos, centrada en la reducción de la variabilidad de los mismos, reforzando y optimizando cada parte de
             proceso consiguiendo reducir o eliminar los defectos o fallos en la entrega de un producto o servicio al
-            cliente. La meta de seis sigma es llegar a un máximo de 3,4 defectos por millón de eventos u oportunidades
+            cliente.</p> 
+            <p> La meta de seis sigma es llegar a un máximo de 3,4 defectos por millón de eventos u oportunidades
             (DPMO), entendiéndose como defecto cualquier evento en el que un producto o servicio no logra cumplir los
-            requisitos del cliente. Dentro de los beneficios que se obtienen del seis sigma están: mejora de la rentabilidad y la productividad.
-            Una diferencia importante con relación a otras metodologías es la orientación al cliente.</div>
+            requisitos del cliente.</P>
+            <P> Dentro de los beneficios que se obtienen del seis sigma están: mejora de la rentabilidad y la productividad.
+            Una diferencia importante con relación a otras metodologías es la orientación al cliente.</p>
+        </div>
          <div class="video"><video src="/videos/sixsigma.mp4" controls width="400px"></video></div>
     </div>  
 </body>
