--- a/index1.html
+++ b/index1.html
@@ -30,7 +30,7 @@
                         <a class="nav-link active" aria-current="page" href="/index1.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/documentos/CV Andrea Poblete.pdf">ABOUT</a>
+                        <a class="nav-link body__menu__link--activo" href="/documentos/CV Andrea Poblete.pdf">ABOUT</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link body__menu__link--activo" href="/six_sigma.html">SIX SIGMA</a>
