modificacion video index

--- a/index1.html
+++ b/index1.html
@@ -54,7 +54,7 @@
                 <p class="text-center">Me interesan los desafíos y busco continuamente superarme, incorporar nuevos conocimientos. Buena actitud y proactividad.</p>  
             </div>
             <div class="col-md-4 align-self-end ">
-            <video src="/videos/video-actitud.mp4" controls width="400px"></video>
+            <video src="/videos/video_actitud_vk.mp4" controls width="400px"></video>
             </div>
         </div>
     </div>
