--- a/desarrolloweb.html
+++ b/desarrolloweb.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <div class="d-grid gap-3 d-md-flex justify-content-md-start">
-        <a href="/index1.html"><button class="btn btn-warning me-md-2" type="button">HOME</button></a>
+        <a href="/index.html"><button class="btn btn-warning me-md-2" type="button">HOME</button></a>
       </div>
     <main class="container-fluid">
         <div class="row pdw">
