--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="col-md-8">
                 <ul class="nav justify-content-end body__menu__link">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index1.html">HOME</a>
+                        <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link body__menu__link--activo" href="/documentos/CV Andrea Poblete.pdf">ABOUT</a>
@@ -51,7 +51,7 @@
             <div class="col-md-8 align-self-start body__p">
                 <p class="text-center">Bienvenid@! Soy Andrea y me desempeño como Desarrollador Web de forma freelance. Mis conocimientos comenzaron en CoderHouse, donde obtuve herramientas de creación y mantenimiento de dominios, conceptos de diseño gráfico y desarrollo web (HTML5, CSS3 y JavaScript).</p>
                 <p class="text-center">Además, cuento con una vasta experiencia en metodología Six Sigma. Como Greenbelt, he participado en varios proyectos de mejora continua.</p>
-                <p class="text-center">Me interesan los desafíos y busco continuamente superarme, incorporar nuevos conocimientos. Buena actitud y proactividad.</p>  
+                <p class="text-center">Me interesan los desafíos y busco continuamente superarme, incorporar nuevos conocimientos. ACTITUD y proactividad.</p>  
             </div>
             <div class="col-md-4 align-self-end ">
             <video src="/videos/video_actitud_vk.mp4" controls width="400px"></video>
