--- a/formulario.html
+++ b/formulario.html
@@ -12,7 +12,7 @@
 </head>
 <body class="fondo4">
     <div class="d-grid gap-3 d-md-flex justify-content-md-start">
-        <a href="/index1.html"><button class="btn btn-success me-md-2" type="button">HOME</button></a>
+        <a href="/index.html"><button class="btn btn-success me-md-2" type="button">HOME</button></a>
       </div>
     <div class="container">
         <div class="row">
