--- a/six_sigma.html
+++ b/six_sigma.html
@@ -12,7 +12,7 @@
 </head>
 <body class="fondo2">
     <div class="col-md-6">
-        <a href="/index1.html"><button class="btn btn-warning me-md-1" type="button">HOME</button></a>
+        <a href="/index.html"><button class="btn btn-warning me-md-1" type="button">HOME</button></a>
     </div>
     <div class="container-fluid">
        <div class="row">
