modificaciones estructura en carpeta

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container-fluid footer__imag">
             <div class="row"> 
                 <div class="col-md-8">
-                    <a href="https://www.instagram.com/anlopoblet/" class="instagram-fondo"><img src="Imagenes/instagram.jpg" class="instagram-fondo" alt="logo"></a>
+                    <a href="https://www.instagram.com/anlopoblet/" class="instagram-fondo"><img src="imagenes/instagram.jpg" class="instagram-fondo" alt="logo"></a>
                     <a href="https://www.facebook.com/andrea.poblete.37"><img src="imagenes/facebook.png" class="facebook-fondo" alt="logo"></a> 
                     <a href="https://www.linkedin.com/feed/" ><img src="imagenes/linkedin.jpg" class="linkedin-fondo" alt="logo"></a>
                     <a href="https://twitter.com/Anlo162"><img src="imagenes/twitter.jpg" class="twitter-fondo" alt="logo"></a>
