--- a/desarrolloweb.html
+++ b/desarrolloweb.html
@@ -12,6 +12,23 @@
     <title>Desarrollo Web</title>
 </head>
 <body class="fondo3">
+    <div class="fondo1">
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active menus" href="/index.html">HOME</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link menus" href="/about.html">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
+            </li>
+            
+            <li class="nav-item">
+              <a class="nav-link menus" href="/formulario.html">CONTACT</a>
+            </li>
+          </ul>
+    </div>
     <header class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center header_dw">
@@ -19,9 +36,7 @@
             </div>
         </div>
     </header>
-    <div class="d-grid gap-3 d-md-flex justify-content-md-start">
-        <a href="/index.html"><button class="btn btn-warning me-md-2" type="button">HOME</button></a>
-      </div>
+  
     <main class="container-fluid">
         <div class="row pdw">
             <div class="col-md-8 offset-md-2 text-center">
