--- a/formulario.html
+++ b/formulario.html
@@ -11,9 +11,22 @@
     <title>Contacto</title>
 </head>
 <body class="fondo4">
-    <div class="d-grid gap-3 d-md-flex justify-content-md-start">
-        <a href="/index.html"><button class="btn btn-success me-md-2" type="button">HOME</button></a>
-      </div>
+    <div>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active menus" aria-current="page" href="/index.html">HOME</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link menus" href="/about.html">ABOUT</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link menus" href="/desarrolloweb.html">DESARROLLO WEB</a>
+            </li>
+          </ul>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
