--- a/six_sigma.html
+++ b/six_sigma.html
@@ -11,8 +11,21 @@
     <title>Six Sigma</title>
 </head>
 <body class="fondo2">
-    <div class="col-md-6">
-        <a href="/index.html"><button class="btn btn-warning me-md-1" type="button">HOME</button></a>
+    <div class="fondo1">
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active menus" href="/index.html">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menus" href="/about.html">ABOUT</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menus" href="/desarrolloweb.html">DESARROLLO WEB</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menus" href="/formulario.html">CONTACT</a>
+            </li>
+          </ul>
     </div>
     <div class="container-fluid">
        <div class="row">
