--- a/sixsigma.html
+++ b/sixsigma.html
@@ -11,7 +11,25 @@
     <title>SIXSIGMA</title>
 </head>
 <body class="fondo2">
-    <div class="button"><button class="btn btn-warning me-md-1"><a href="/six_sigma.html">SIX SIGMA</a></button></div>
+    <div class="fondo1">
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active menus" href="/index.html">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menus" href="/about.html">ABOUT</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link menus" href="/desarrolloweb.html">DESARROLLO WEB</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link menus" href="/formulario.html">CONTACT</a>
+            </li>
+          </ul>
+    </div>
     <div class="container-sixsigma">
         <div class="parrafos">
             <p>Sigma (6 σ) o Six Sigma, más conocida por su denominación en inglés, es una estrategia de mejora de
