--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Andrea Poblete</title>
 </head>
 <body class="fondo1">
-    <div class="container-fluid">
+    <div class="container-fluid fondo1">
         <div class="row">
             <div class="col-md-4">
                 <img src="/imagenes/logo crudook.png" class="img-fluid body__logo">
@@ -26,24 +26,23 @@
             <div class="col-md-8">
                 <ul class="nav justify-content-end body__menu__link">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
+                        <a class="nav-link active body__menu__link" aria-current="page" href="/index.html">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link body__menu__link--activo" href="/documentos/CV Andrea Poblete.pdf">ABOUT</a>
+                        <a class="nav-link body__menu__link body__menu__link--activo" href="about.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link body__menu__link--activo" href="/six_sigma.html">SIX SIGMA</a>
+                        <a class="nav-link body__menu__link body__menu__link--activo" href="/six_sigma.html">SIX SIGMA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link body__menu__link--activo" href="/desarrolloweb.html">DESARROLLO WEB</a>
+                        <a class="nav-link body__menu__link body__menu__link--activo" href="/desarrolloweb.html">DESARROLLO WEB</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/formulario.html">CONTACT</a>
+                        <a class="nav-link body__menu__link body__menu__link--activo" href="/formulario.html">CONTACT</a>
                     </li>
                 </ul>
             </div>
         </div>
-    </div>
     </div>
     <div class="container">
         <div class="row align-items-center">
@@ -52,7 +51,7 @@
                 <p class="text-center">Además, cuento con una vasta experiencia en metodología Six Sigma. Como Greenbelt, he participado en varios proyectos de mejora continua.</p>
                 <p class="text-center">Me interesan los desafíos y busco continuamente superarme, incorporar nuevos conocimientos. ACTITUD y proactividad.</p>  
             </div>
-            <div class="col-md-4 align-self-end ">
+            <div class="col-md-4 align-self-end">
             <video src="/videos/video_actitud_vk.mp4" controls width="400px"></video>
             </div>
         </div>
