menu en espanol

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="col-md-8">
                 <ul class="nav justify-content-end body__menu__link">
                     <li class="nav-item">
-                        <a class="nav-link active body__menu__link" aria-current="page" href="/index.html">HOME</a>
+                        <a class="nav-link active body__menu__link" aria-current="page" href="/index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link body__menu__link body__menu__link--activo" href="about.html">ABOUT</a>
+                        <a class="nav-link body__menu__link body__menu__link--activo" href="about.html">SOBRE MI</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link body__menu__link body__menu__link--activo" href="/six_sigma.html">SIX SIGMA</a>
@@ -38,7 +38,7 @@
                         <a class="nav-link body__menu__link body__menu__link--activo" href="/desarrolloweb.html">DESARROLLO WEB</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link body__menu__link body__menu__link--activo" href="/formulario.html">CONTACT</a>
+                        <a class="nav-link body__menu__link body__menu__link--activo" href="/formulario.html">CONTACTO</a>
                     </li>
                 </ul>
             </div>
