--- a/formulario.html
+++ b/formulario.html
@@ -14,10 +14,10 @@
     <div>
         <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link active menus" aria-current="page" href="/index.html">HOME</a>
+              <a class="nav-link active menus" aria-current="page" href="/index.html">INICIO</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link menus" href="/about.html">ABOUT</a>
+                <a class="nav-link menus" href="/about.html">SOBRE MI</a>
               </li>
             <li class="nav-item">
               <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
