--- a/sixsigma.html
+++ b/sixsigma.html
@@ -14,10 +14,10 @@
     <div class="fondo1">
         <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link active menus" href="/index.html">HOME</a>
+              <a class="nav-link active menus" href="/index.html">INICIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menus" href="/about.html">ABOUT</a>
+              <a class="nav-link menus" href="/about.html">SOBRE MI</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
@@ -26,7 +26,7 @@
               <a class="nav-link menus" href="/desarrolloweb.html">DESARROLLO WEB</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menus" href="/formulario.html">CONTACT</a>
+              <a class="nav-link menus" href="/formulario.html">CONTACTO</a>
             </li>
           </ul>
     </div>
