--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <div class="fondo1">
     <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active menus" href="/index.html">HOME</a>
+          <a class="nav-link active menus" href="/index.html">INICIO</a>
         </li>
         <li class="nav-item">
           <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
@@ -30,7 +30,7 @@
           <a class="nav-link menus" href="/desarrolloweb.html">DESARROLLO WEB</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link menus" href="/formulario.html">CONTACT</a>
+          <a class="nav-link menus" href="/formulario.html">CONTACTO</a>
         </li>
       </ul>
 </div>
