--- a/six_sigma.html
+++ b/six_sigma.html
@@ -14,16 +14,16 @@
     <div class="fondo1">
         <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link active menus" href="/index.html">HOME</a>
+              <a class="nav-link active menus" href="/index.html">INICIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menus" href="/about.html">ABOUT</a>
+              <a class="nav-link menus" href="/about.html">SOBRE MI</a>
             </li>
             <li class="nav-item">
               <a class="nav-link menus" href="/desarrolloweb.html">DESARROLLO WEB</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menus" href="/formulario.html">CONTACT</a>
+              <a class="nav-link menus" href="/formulario.html">CONTACTO</a>
             </li>
           </ul>
     </div>
