--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Freelancer">
-    <meta name="keywords" content="desarrollo web, six sigma, mejora continua">
+    <meta name="description" content="desarrollar, analizar">
+    <meta name="keywords" content="desarrollo web,mejora continua">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https: //fonts.googleapis.com/css2? family = Style + Script & display = swap " rel=" stylesheet ">
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="/css2/estilos2.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <title>Andrea Poblete</title>
+    <title>Presentacion_Andrea Poblete</title>
 </head>
 <body class="fondo1">
     <div class="container-fluid fondo1">
         <div class="row">
             <div class="col-md-4">
-                <img src="/imagenes/logo crudook.png" class="img-fluid body__logo">
+                <a href="/index.html"><img src="./imagenes/logo crudook.png" class="img-fluid body__logo" alt="logo"></a>
             </div>
             <div class="col-md-8">
                 <ul class="nav justify-content-end body__menu__link">
@@ -29,7 +29,7 @@
                         <a class="nav-link active body__menu__link" aria-current="page" href="/index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link body__menu__link body__menu__link--activo" href="about.html">SOBRE MI</a>
+                        <a class="nav-link body__menu__link body__menu__link--activo" href="sobre_mi.html">SOBRE MI</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link body__menu__link body__menu__link--activo" href="/six_sigma.html">SIX SIGMA</a>
