--- a/desarrolloweb.html
+++ b/desarrolloweb.html
@@ -4,21 +4,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="desarrollo web, desarrollador, paginas web">
+    <meta name="keywords" content="paginas web">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/estilo.css">
     <link rel="stylesheet" href="/css2/estilos2.css">
-    <title>Desarrollo Web</title>
+    <title>Trabajo_Desarrollo Web</title>
 </head>
 <body class="fondo3">
-    <div class="fondo1">
+    <div class="container-fluid fondo1">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="/index.html"><img src="./imagenes/logo crudook.png" class="img-fluid body__logo" alt="logo"></a>
+            </div>
+        <div class="col-md-8">
         <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link active menus" href="/index.html">INICIO</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link menus" href="/about.html">SOBRE MI</a>
+                <a class="nav-link menus" href="/sobre_mi.html">SOBRE MI</a>
             </li>
             <li class="nav-item">
               <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
@@ -36,7 +41,6 @@
             </div>
         </div>
     </header>
-  
     <main class="container-fluid">
         <div class="row pdw">
             <div class="col-md-8 offset-md-2 text-center">
@@ -80,6 +84,25 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container-fluid footer__imag">
+            <div class="row"> 
+                <div class="col-md-8">
+                    <a href="https://www.instagram.com/anlopoblet/" class="instagram-fondo"><img src="./imagenes/instagram.jpg" class="instagram-fondo" alt="logo"></a>
+                    <a href="https://www.facebook.com/andrea.poblete.37"><img src="./imagenes/facebook.png" class="facebook-fondo" alt="logo"></a> 
+                    <a href="https://www.linkedin.com/feed/" ><img src="./imagenes/linkedin.jpg" class="linkedin-fondo" alt="logo"></a>
+                    <a href="https://twitter.com/Anlo162"><img src="./imagenes/twitter.jpg" class="twitter-fondo" alt="logo"></a>
+                 </div>
+            </div>
+        </div>
+        <div class="container-fluid footer__p">
+            <div class="row"> 
+                <div class="col-md-8">
+                    <p>@Copyright Andrea Poblete</p>
+                 </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
@@ -90,5 +113,4 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
