--- a/formulario.html
+++ b/formulario.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="freelance, freelancer">
+    <meta name="keywords" content="freelance">
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="/css2/estilos2.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <title>Contacto</title>
 </head>
 <body class="fondo4">
-    <div>
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="/index.html"><img src="./imagenes/logo crudook.png" class="img-fluid body__logo" alt="logo"></a>
+        </div>
+        <div class="col-md-8">
         <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link active menus" aria-current="page" href="/index.html">INICIO</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link menus" href="/about.html">SOBRE MI</a>
+                <a class="nav-link menus" href="/sobre_mi.html">SOBRE MI</a>
               </li>
             <li class="nav-item">
               <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
@@ -30,7 +35,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <h1 class="text-center form__titulo">CONTACTANOS</h4>
+                <h1 class="text-center form__titulo">CONTACTANOS</h1>
             </div>
         </div>
         <div class="row">
@@ -54,8 +59,16 @@
             <div class="col-md-6">
                 <img src="/imagenes/contacto.jpg" class="img-fluid">
             </div>
-        </div>
-    </div>
-    <script src="js/bootstrap.bundle.min.js"></script>
+          </div>
+      </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+  integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+  crossorigin="anonymous"></script>
 </body>
 </html>
