--- a/six_sigma.html
+++ b/six_sigma.html
@@ -8,16 +8,21 @@
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="/css2/estilos2.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <title>Six Sigma</title>
+    <title>Trabajo_Six Sigma</title>
 </head>
 <body class="fondo2">
-    <div class="fondo1">
+    <div class="container-fluid fondo1">
+        <div class="row">
+            <div class="col-md-4">
+                <a href="/index.html"><img src="./imagenes/logo crudook.png" class="img-fluid body__logo" alt="logo"></a>
+            </div>
+        <div class="col-md-8">
         <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link active menus" href="/index.html">INICIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menus" href="/about.html">SOBRE MI</a>
+              <a class="nav-link menus" href="/sobre_mi.html">SOBRE MI</a>
             </li>
             <li class="nav-item">
               <a class="nav-link menus" href="/desarrolloweb.html">DESARROLLO WEB</a>
@@ -35,7 +40,7 @@
         </div>
         <div class="row">
             <div class="col-md-6 table">  
-                <h3 class="text-center">Mis Proyectos</h4>      
+                <h2 class="text-center">Mis Proyectos</h2>      
                 <div class="container-table col-md-8 offset-md-2">
                     <div class="table__header">Año</div>
                     <div class="table__header">Proyecto</div>
@@ -51,6 +56,25 @@
                 <img src="/imagenes/sixsigmadmaic.jpg" class="img-fluid" width="550px">
             </div>
         </div>
+        <footer>
+            <div class="container-fluid footer__imag">
+                <div class="row"> 
+                    <div class="col-md-8">
+                        <a href="https://www.instagram.com/anlopoblet/" class="instagram-fondo"><img src="./imagenes/instagram.jpg" class="instagram-fondo" alt="logo"></a>
+                        <a href="https://www.facebook.com/andrea.poblete.37"><img src="./imagenes/facebook.png" class="facebook-fondo" alt="logo"></a> 
+                        <a href="https://www.linkedin.com/feed/" ><img src="./imagenes/linkedin.jpg" class="linkedin-fondo" alt="logo"></a>
+                        <a href="https://twitter.com/Anlo162"><img src="./imagenes/twitter.jpg" class="twitter-fondo" alt="logo"></a>
+                     </div>
+                </div>
+            </div>
+            <div class="container-fluid footer__p">
+                <div class="row"> 
+                    <div class="col-md-8">
+                        <p>@Copyright Andrea Poblete</p>
+                     </div>
+                </div>
+            </div>
+        </footer>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
