--- a/sixsigma.html
+++ b/sixsigma.html
@@ -8,16 +8,21 @@
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="/css2/estilos2.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <title>SIXSIGMA</title>
+    <title>Info SIXSIGMA</title>
 </head>
 <body class="fondo2">
-    <div class="fondo1">
+  <div class="container-fluid fondo1">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="/index.html"><img src="./imagenes/logo crudook.png" class="img-fluid body__logo" alt="logo"></a>
+        </div>
+        <div class="col-md-8">
         <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link active menus" href="/index.html">INICIO</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menus" href="/about.html">SOBRE MI</a>
+              <a class="nav-link menus" href="/sobre_mi.html">SOBRE MI</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link menus" href="/six_sigma.html">SIX SIGMA</a>
@@ -44,14 +49,33 @@
         </div>
          <div class="video"><video src="/videos/sixsigma.mp4" controls width="400px"></video></div>
     </div> 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+<footer>
+      <div class="container-fluid footer__imag">
+          <div class="row"> 
+              <div class="col-md-12">
+                  <a href="https://www.instagram.com/anlopoblet/" class="instagram-fondo"><img src="./imagenes/instagram.jpg" class="instagram-fondo" alt="logo"></a>
+                  <a href="https://www.facebook.com/andrea.poblete.37"><img src="./imagenes/facebook.png" class="facebook-fondo" alt="logo"></a> 
+                  <a href="https://www.linkedin.com/feed/" ><img src="./imagenes/linkedin.jpg" class="linkedin-fondo" alt="logo"></a>
+                  <a href="https://twitter.com/Anlo162"><img src="./imagenes/twitter.jpg" class="twitter-fondo" alt="logo"></a>
+               </div>
+          </div>
+      </div>
+      <div class="container-fluid footer__p">
+          <div class="row"> 
+              <div class="col-md-12">
+                  <p>@Copyright Andrea Poblete</p>
+               </div>
+          </div>
+      </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
+  integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+  crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script> 
+  integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+  crossorigin="anonymous"></script>
 </body> 
 </html>
