--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Freelancer">
-    <meta name="keywords" content="desarrollo web, six sigma, mejora continua">
+    <meta name="description" content="analisis">
+    <meta name="keywords" content="desarrollo web, six sigma">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https: //fonts.googleapis.com/css2? family = Style + Script & display = swap " rel=" stylesheet ">
@@ -15,10 +15,15 @@
     <link rel="stylesheet" href="estilo.css">
     <link rel="stylesheet" href="/css2/estilos2.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <title>about</title>
+    <title>Sobre Mi</title>
 </head>
 <body class="fondo3">
-<div class="fondo1">
+  <div class="container-fluid fondo1">
+    <div class="row">
+        <div class="col-md-4">
+            <a href="/index.html"><img src="./imagenes/logo crudook.png" class="img-fluid body__logo" alt="logo"></a>
+        </div>
+<div class="col-md-8">
     <ul class="nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link active menus" href="/index.html">INICIO</a>
@@ -47,9 +52,27 @@
         implantación y seguimiento de mejoras.</p>
     </div>
     <div class="col-md-4 offset-md-2 align-self-end body__p">
-        <img src="/imagenes/mi_imagen.jpeg" alt="mi_foto" width="300px">
+        <img src="/imagenes/mi_imagen.jpeg" alt="mi_foto" width="400px">
     </div>
-<footer></footer>
+  <footer>
+    <div class="container-fluid footer__imag">
+        <div class="row"> 
+            <div class="col-md-12">
+                <a href="https://www.instagram.com/anlopoblet/" class="instagram-fondo"><img src="./imagenes/instagram.jpg" class="instagram-fondo" alt="logo"></a>
+                <a href="https://www.facebook.com/andrea.poblete.37"><img src="./imagenes/facebook.png" class="facebook-fondo" alt="logo"></a> 
+                <a href="https://www.linkedin.com/feed/" ><img src="./imagenes/linkedin.jpg" class="linkedin-fondo" alt="logo"></a>
+                <a href="https://twitter.com/Anlo162"><img src="./imagenes/twitter.jpg" class="twitter-fondo" alt="logo"></a>
+             </div>
+        </div>
+    </div>
+    <div class="container-fluid footer__p">
+        <div class="row"> 
+            <div class="col-md-12">
+                <p>@Copyright Andrea Poblete</p>
+             </div>
+        </div>
+    </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
