--- a/desarrolloweb.html
+++ b/desarrolloweb.html
@@ -61,13 +61,13 @@
                 <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/imagenes/ejemplo1.png" class="d-block w-100" alt="...">
+                            <img src="/imagenes/ejemplo1.png" class="d-block w-100" alt="ejemplo1">
                         </div>
                         <div class="carousel-item">
-                            <img src="/imagenes/ejemplo2.jpg" class="d-block w-100" alt="...">
+                            <img src="/imagenes/ejemplo2.jpg" class="d-block w-100" alt="ejemplo2">
                         </div>
                         <div class="carousel-item">
-                            <img src="/imagenes/ejemplo3.jpg" class="d-block w-100" alt="...">
+                            <img src="/imagenes/ejemplo3.jpg" class="d-block w-100" alt="ejemplo3">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carousel1"
